# clipwidget

./: CMakeLists.txt  customwidget.cpp  customwidget.h  dclipeffectwidget.cpp  dclipeffectwidget.h  mainwindow.cpp
